--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -106,8 +106,17 @@
                                     aria-label="Search">
                             </div>
                         </form>
-                        <li class="nav-item active px-1 order-sm-1 order-lg-2">
-                            <a class="nav-link pl-3" href="#"><i class="fas fa-user"></i></a>
+                        <li class="nav-item dropdown active px-1 order-sm-1 order-lg-2">
+                            <a class="nav-link pl-3 dropdown-toggle shop" href="#" data-toggle="dropdown"><i class="fas fa-user"></i></a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Welcome user, if logged in</a></li>
+                                <li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+                                    Login
+                                  </button></li>
+                                  <li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signupModal">
+                                    Signup
+                                  </button></li>
+                              </ul>
                         </li>
 
                         <li class="nav-item active px-1 order-sm-2 order-lg-3">
@@ -121,3 +130,41 @@
                 </div>
             </div>
     </div>
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Login Modal</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Signup Modal</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
