--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,3 +1,4 @@
+<%- include('../views/partials/header')%>
 <h1>Show Page</h1>
 
 <div class="card">
@@ -8,3 +9,4 @@
     
     </div>
 </div>
+<%- include('../views/partials/footer')%>
