--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,268 +30,25 @@
                 <!-- Slides -->
                 <div class="swiper-slide">
                     <div class="card" style="width: 18rem;">
-                        <img src="/stylesheets/imgs/product-1.jpg " class="card-img-top" alt="">
-
-                    </div>
-                    <div class="foot py-2">
-                        <h5>Young Woman Wearing Dress</h5>
-                        <h4>$120.00 </h4>
-                        <span class="wishlist">
-                            <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-sm btn-outline-danger active">
-                                    <input type="checkbox"> <i class="fas fa-heart"></i>
-                                </label>
-                                <label class="btn btn-sm btn-outline-primary active">
-                                    <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                                </label>
-                            </div>
-                        </span>
-                    </div>
+                        <img src="/stylesheets/imgs/product-1.jpg" class="card-img-top" alt="...">
+                      </div>
+                      
                 </div>
-                <div class="swiper-slide">
-                    <div class="card" style="width: 18rem;">
-                        <img src="/stylesheets/imgs/product-2.jpg" class="card-img-top" alt="...">
-
-                    </div>
-                    <div class="foot py-2">
-                        <h5>Young Woman Wearing Dress</h5>
-                        <h4>$120.00</h4>
-                        <span class="wishlist">
-                            <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-sm btn-outline-danger active">
-                                    <input type="checkbox"> <i class="fas fa-heart"></i>
-                                </label>
-                                <label class="btn btn-sm btn-outline-primary active">
-                                    <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                                </label>
-                            </div>
-                        </span>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="card " style="width: 18rem;">
-                        <img src="/stylesheets/imgs/product-3.jpg" class="card-img-top " alt="...">
-                        <span class="status">30%</span>
-                    </div>
-                    <div class="foot py-2">
-                        <h5>Young Woman Wearing Dress</h5>
-                        <h4><del>$120.00</del> $80 </h4>
-                        <span class="wishlist">
-                            <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-sm btn-outline-danger active">
-                                    <input type="checkbox"> <i class="fas fa-heart"></i>
-                                </label>
-                                <label class="btn btn-sm btn-outline-primary active">
-                                    <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                                </label>
-                            </div>
-                        </span>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="card" style="width: 18rem;">
-                        <img src="/stylesheets/imgs/product-4.jpg" class="card-img-top" alt="...">
-
-                    </div>
-                    <div class="foot py-2">
-                        <h5>Young Woman Wearing Dress</h5>
-                        <h4>$120.00</h4>
-                        <span class="wishlist">
-                            <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-sm btn-outline-danger active">
-                                    <input type="checkbox"> <i class="fas fa-heart"></i>
-                                </label>
-                                <label class="btn btn-sm btn-outline-primary active">
-                                    <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                                </label>
-                            </div>
-                        </span>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="card" style="width: 18rem;">
-                        <img src="/stylesheets/imgs/product-5.jpg" class="card-img-top" alt="...">
-                        <span class="status">30%</span>
-
-                    </div>
-                    <div class="foot py-2">
-                        <h5>Young Woman Wearing Dress</h5>
-                        <h4><del>$160 </del> $120.00</h4>
-                        <span class="wishlist">
-                            <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-sm btn-outline-danger active">
-                                    <input type="checkbox"> <i class="fas fa-heart"></i>
-                                </label>
-                                <label class="btn btn-sm btn-outline-primary active">
-                                    <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                                </label>
-                            </div>
-                        </span>
-
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="card" style="width: 18rem;">
-                        <img src="/stylesheets/imgs/product-6.jpg" class="card-img-top" alt="...">
-
-                    </div>
-                    <div class="foot py-2">
-                        <h5>Young Woman Wearing Dress</h5>
-                        <h4>$120.00</h4>
-                        <span class="wishlist">
-                            <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-sm btn-outline-danger active">
-                                    <input type="checkbox"> <i class="fas fa-heart"></i>
-                                </label>
-                                <label class="btn btn-sm btn-outline-primary active">
-                                    <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                                </label>
-
-                            </div>
-                        </span>
-                    </div>
-                </div>
-                ...
+                <div class="swiper-slide">Slide 2</div>
+                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">Slide 4</div>
+                <div class="swiper-slide">Slide 5</div>
+                <div class="swiper-slide">Slide 6</div>
+                
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
-
+        
             <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
+    
+        
             <!-- If we need scrollbar -->
             <div class="swiper-scrollbar"></div>
-        </div>
-        <div class="owl-carousel owl-theme ">
-            <div class="item">
-                <div class="card" style="width: 18rem;">
-                    <img src="/stylesheets/imgs/product-1.jpg " class="card-img-top" alt="">
-
-                </div>
-                <div class="foot py-2">
-                    <h5>Young Woman Wearing Dress</h5>
-                    <h4>$120.00 </h4>
-                    <span class="wishlist">
-                        <div class="btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-sm btn-outline-danger active">
-                                <input type="checkbox"> <i class="fas fa-heart"></i>
-                            </label>
-                            <label class="btn btn-sm btn-outline-primary active">
-                                <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                            </label>
-                        </div>
-                    </span>
-                </div>
-
-            </div>
-            <div class="item">
-                <div class="card" style="width: 18rem;">
-                    <img src="/stylesheets/imgs/product-2.jpg" class="card-img-top" alt="...">
-
-                </div>
-                <div class="foot py-2">
-                    <h5>Young Woman Wearing Dress</h5>
-                    <h4>$120.00</h4>
-                    <span class="wishlist">
-                        <div class="btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-sm btn-outline-danger active">
-                                <input type="checkbox"> <i class="fas fa-heart"></i>
-                            </label>
-                            <label class="btn btn-sm btn-outline-primary active">
-                                <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                            </label>
-                        </div>
-                    </span>
-                </div>
-
-            </div>
-            <div class="item">
-                <div class="card " style="width: 18rem;">
-                    <img src="/stylesheets/imgs/product-3.jpg" class="card-img-top " alt="...">
-                    <span class="status">30%</span>
-                </div>
-                <div class="foot py-2">
-                    <h5>Young Woman Wearing Dress</h5>
-                    <h4><del>$120.00</del> $80 </h4>
-                    <span class="wishlist">
-                        <div class="btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-sm btn-outline-danger active">
-                                <input type="checkbox"> <i class="fas fa-heart"></i>
-                            </label>
-                            <label class="btn btn-sm btn-outline-primary active">
-                                <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                            </label>
-                        </div>
-                    </span>
-                </div>
-
-            </div>
-            <div class="item">
-                <div class="card" style="width: 18rem;">
-                    <img src="/stylesheets/imgs/product-4.jpg" class="card-img-top" alt="...">
-
-                </div>
-                <div class="foot py-2">
-                    <h5>Young Woman Wearing Dress</h5>
-                    <h4>$120.00</h4>
-                    <span class="wishlist">
-                        <div class="btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-sm btn-outline-danger active">
-                                <input type="checkbox"> <i class="fas fa-heart"></i>
-                            </label>
-                            <label class="btn btn-sm btn-outline-primary active">
-                                <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                            </label>
-                        </div>
-                    </span>
-                </div>
-
-            </div>
-            <div class="item">
-                <div class="card" style="width: 18rem;">
-                    <img src="/stylesheets/imgs/product-5.jpg" class="card-img-top" alt="...">
-                    <span class="status">30%</span>
-
-                </div>
-                <div class="foot py-2">
-                    <h5>Young Woman Wearing Dress</h5>
-                    <h4><del>$160 </del> $120.00</h4>
-                    <span class="wishlist">
-                        <div class="btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-sm btn-outline-danger active">
-                                <input type="checkbox"> <i class="fas fa-heart"></i>
-                            </label>
-                            <label class="btn btn-sm btn-outline-primary active">
-                                <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                            </label>
-                        </div>
-                    </span>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="card" style="width: 18rem;">
-                    <img src="/stylesheets/imgs/product-6.jpg" class="card-img-top" alt="...">
-
-                </div>
-                <div class="foot py-2">
-                    <h5>Young Woman Wearing Dress</h5>
-                    <h4>$120.00</h4>
-                    <span class="wishlist">
-                        <div class="btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-sm btn-outline-danger active">
-                                <input type="checkbox"> <i class="fas fa-heart"></i>
-                            </label>
-                            <label class="btn btn-sm btn-outline-primary active">
-                                <input type="checkbox"> <i class="fas fa-shopping-bag"></i>
-                            </label>
-
-                        </div>
-                    </span>
-                </div>
-
-            </div>
         </div>
     </div>
 
@@ -556,6 +313,9 @@
 
             </div>
         </div>
+
+
+
 
 
 
