--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <%- include('../views/partials/header')%>
 <h1>Hellllllllllllllllloooo</h1>
+<h1>Heyaaaa</h1>
 
 <%- include('../views/partials/footer')%>
